SERVER-15899 BSONElementIterator::more() shouldn't overflow stack

BSONElementIterator::more() was using a stack frame per array
element traversed.